// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`command > arguments 1`] = `
[
  "* * * * * npx aomex hello:test --data testme --mark --verbose",
]
`;

exports[`command > double quote for argument with spaces 1`] = `
[
  "* * * * * npx aomex hello:test --data "test me" --mark --verbose",
]
`;

exports[`command > name 1`] = `
[
  "* * * * * npx aomex hello:test",
]
`;

exports[`command > name 2`] = `
[
  "* * * * * npx aomex custom:schedule",
]
`;

exports[`time > * 1`] = `
[
  "* * * * * npx aomex my:schedule",
]
`;

exports[`time > day of month 1`] = `
[
  "* * */2 * * npx aomex my:schedule",
]
`;

exports[`time > day of month 2`] = `
[
  "* * 1-10/2 * * npx aomex my:schedule",
]
`;

exports[`time > day of month 3`] = `
[
  "* * 0-22 * * npx aomex my:schedule",
]
`;

exports[`time > day of week 1`] = `
[
  "* * * * */2 npx aomex my:schedule",
]
`;

exports[`time > day of week 2`] = `
[
  "* * * * 0-6/2 npx aomex my:schedule",
]
`;

exports[`time > day of week 3`] = `
[
  "* * * * 1 npx aomex my:schedule",
]
`;

exports[`time > hour 1`] = `
[
  "* */2 * * * npx aomex my:schedule",
]
`;

exports[`time > hour 2`] = `
[
  "* 1-10/2 * * * npx aomex my:schedule",
]
`;

exports[`time > hour 3`] = `
[
  "* 1-20 * * * npx aomex my:schedule",
]
`;

exports[`time > minute 1`] = `
[
  "2,4-19,*/6 * * * * npx aomex my:schedule",
]
`;

exports[`time > minute 2`] = `
[
  "1-10/2 * * * * npx aomex my:schedule",
]
`;

exports[`time > minute 3`] = `
[
  "1-60 * * * * npx aomex my:schedule",
]
`;

exports[`time > month 1`] = `
[
  "* * * */2 * npx aomex my:schedule",
]
`;

exports[`time > month 2`] = `
[
  "* * * 1-10/2 * npx aomex my:schedule",
]
`;

exports[`time > month 3`] = `
[
  "* * * 0-11 * npx aomex my:schedule",
]
`;

exports[`time > second 1`] = `
[
  "* * * * * npx aomex my:schedule",
  "* * * * * sleep 0; npx aomex my:schedule",
  "* * * * * sleep 2; npx aomex my:schedule",
  "* * * * * sleep 4; npx aomex my:schedule",
  "* * * * * sleep 6; npx aomex my:schedule",
  "* * * * * sleep 8; npx aomex my:schedule",
  "* * * * * sleep 10; npx aomex my:schedule",
  "* * * * * sleep 12; npx aomex my:schedule",
  "* * * * * sleep 14; npx aomex my:schedule",
  "* * * * * sleep 16; npx aomex my:schedule",
  "* * * * * sleep 18; npx aomex my:schedule",
  "* * * * * sleep 20; npx aomex my:schedule",
  "* * * * * sleep 22; npx aomex my:schedule",
  "* * * * * sleep 24; npx aomex my:schedule",
  "* * * * * sleep 26; npx aomex my:schedule",
  "* * * * * sleep 28; npx aomex my:schedule",
  "* * * * * sleep 30; npx aomex my:schedule",
  "* * * * * sleep 32; npx aomex my:schedule",
  "* * * * * sleep 34; npx aomex my:schedule",
  "* * * * * sleep 36; npx aomex my:schedule",
  "* * * * * sleep 38; npx aomex my:schedule",
  "* * * * * sleep 40; npx aomex my:schedule",
  "* * * * * sleep 42; npx aomex my:schedule",
  "* * * * * sleep 44; npx aomex my:schedule",
  "* * * * * sleep 46; npx aomex my:schedule",
  "* * * * * sleep 48; npx aomex my:schedule",
  "* * * * * sleep 50; npx aomex my:schedule",
  "* * * * * sleep 52; npx aomex my:schedule",
  "* * * * * sleep 54; npx aomex my:schedule",
  "* * * * * sleep 56; npx aomex my:schedule",
  "* * * * * sleep 58; npx aomex my:schedule",
]
`;

exports[`time > second 2`] = `
[
  "* * * * * npx aomex my:schedule",
  "* * * * * sleep 1; npx aomex my:schedule",
  "* * * * * sleep 3; npx aomex my:schedule",
  "* * * * * sleep 5; npx aomex my:schedule",
  "* * * * * sleep 7; npx aomex my:schedule",
  "* * * * * sleep 9; npx aomex my:schedule",
  "* * * * * sleep 11; npx aomex my:schedule",
]
`;

exports[`time > second 3`] = `
[
  "* * * * * npx aomex my:schedule",
  "* * * * * sleep 1; npx aomex my:schedule",
  "* * * * * sleep 2; npx aomex my:schedule",
  "* * * * * sleep 3; npx aomex my:schedule",
  "* * * * * sleep 4; npx aomex my:schedule",
  "* * * * * sleep 5; npx aomex my:schedule",
  "* * * * * sleep 6; npx aomex my:schedule",
  "* * * * * sleep 7; npx aomex my:schedule",
]
`;
